--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,5 +87,6 @@ dependencies {
     kapt "com.github.bumptech.glide:compiler:$glide_version"
     // Room
     implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
 }
